--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
     <header class="py-3 mb-4 border-bottom">
       <div class="container d-flex flex-wrap justify-content-center">
         <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
-          <img class="bi me-2" src="imagenes/logo1.jpg" width="50" height="50"></img>
+          <img class="bi me-2" src="imagenes/logo1.JPG" width="50" height="50"></img>
           <span class="fs-4">West Sun</span>
         </a>
         <form class="col-12 col-lg-auto mb-3 mb-lg-0" role="search">
@@ -62,7 +62,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h1 class="placeholder-glow">The West Sun BRAND</h1>
             <br>
-            <img class="bi me-2" src="imagenes/logo1.jpg" width="80" height="80"></img>
+            <img class="bi me-2" src="imagenes/logo1.JPG" width="80" height="80"></img>
             <br>
             <br>
             <h5>By: Daniel Castillo</h5>
@@ -393,7 +393,7 @@
         <p class="col-md-4 mb-0 text-muted">&copy; 2022 West Sun, Inc</p>
     
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-          <img class="bi me-2" src="imagenes/logo1.jpg" width="80" height="80"></img>
+          <img class="bi me-2" src="imagenes/logo1.JPG" width="80" height="80"></img>
         </a>
     
         <ul class="nav col-md-4 justify-content-end">
