--- a/html/about.html
+++ b/html/about.html
@@ -37,7 +37,7 @@
     <header class="py-3 mb-4 border-bottom">
       <div class="container d-flex flex-wrap justify-content-center">
         <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
-          <img class="bi me-2" src="../imagenes/logo1.jpg" width="50" height="50"></img>
+          <img class="bi me-2" src="../imagenes/logo2.JPG" width="50" height="50"></img>
           <span class="fs-4">West Sun</span>
         </a>
         <form class="col-12 col-lg-auto mb-3 mb-lg-0" role="search">
